--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3efa0dc",
+   "id": "d7394a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5279,7 +5279,7 @@
     "        in_remain = in_remain[mask] \n",
     "        in_cbm = init_cbm(cbm_bbox[mask],bbox_cbm_mx, cbm_mbox[ith_data], boxes_idx, num_max_remain, K) #l\n",
     "        # 대박스 규격 선택\n",
-    "        action_idx = agent.get_action(in_state, loading_loc_c, in_remain, in_loading, in_cbm)\n",
+    "        action_idx = bbox_agent.get_action(in_state, loading_loc_c, in_remain, in_loading, in_cbm)\n",
     "        bbox_idx = np.where(mask)[0][action_idx]\n",
     "        env.reset(bbox_idx)\n",
     "        history.append(in_state[action_idx])\n",
@@ -5415,6 +5415,10 @@
     "                if global_step % agent.update_target_rate == 0: # target model 업데이트\n",
     "                    agent.update_target_model()\n",
     "                avg_loss_l.append(agent.avg_loss/float(step))\n",
+    "            if len(bbox_agent.memory) >= bbox_agent.train_start & ~is_pred:\n",
+    "                bbox_agent.train_model()\n",
+    "                if global_step % bbox_agent.update_target_rate == 0: # target model 업데이트\n",
+    "                    bbox_agent.update_target_model()\n",
     "            \n",
     "            \n",
     "#             %matplotlib inline\n",
