Append Sample & Save Weights

--- a/3DBPP/ActorCritic/train_multi_agent.ipynb
+++ b/3DBPP/ActorCritic/train_multi_agent.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7394a3f",
+   "id": "6e3fb09c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5455,6 +5455,8 @@
     "            for a in range(a_repeate):\n",
     "                agent.append_sample(history[i], h_load[i], h_remain_size[i], h_load_size[i], reward, end_epi, #is_last[i],\n",
     "                                    t_history[i], t_load[i], t_remain_size[i], t_load_size[i], h_cbm[i], t_cbm[i])\n",
+    "                bbox_agent.append_sample(history[i], h_load[i], h_remain_size[i], h_load_size[i], reward, end_epi, #is_last[i],\n",
+    "                                    t_history[i], t_load[i], t_remain_size[i], t_load_size[i], h_cbm[i], t_cbm[i])\n",
     "                \n",
     "    log = \"=====episode:{:5d}| \".format(e)\n",
     "    log += \"memory length:{:5d}| \".format(len(agent.memory))\n",
@@ -5471,6 +5473,7 @@
     "    # 모델 저장\n",
     "    if e % 5000 == 0:\n",
     "        agent.model.save_weights(\"save_model/model\", save_format=\"tf\")\n",
+    "        bbox_agent.model.save_weights(\"save_model/bbox_model\", save_format=\"tf\")\n",
     "    \n",
     "    if is_pred:\n",
     "        i = 0\n",
