--- a/Furniture/App.ipynb
+++ b/Furniture/App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "id": "79269fc8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 5,
    "id": "caf9a308",
    "metadata": {},
    "outputs": [],
@@ -116,6 +116,7 @@
     "        item = self.canvas.find_withtag(10)\n",
     "        self.canvas.itemconfig(item, fill='black')\n",
     "        \n",
+    "        \n",
     "    def choose_color(self):\n",
     "        self.color_code = colorchooser.askcolor(title='Choose color')\n",
     "        self.canvas2.itemconfig(self.canvas2.find_withtag(self.color_rect), fill=self.color_code[1])\n",
@@ -138,7 +139,10 @@
     "        self.furniture_list[key]['Size'] = size\n",
     "        self.furniture_list[key]['IsMain'] = ismain\n",
     "        \n",
-    "        rect = Canvas(self.window, bg=color, width=self.recX-1, height=self.recY-1, highlightthickness=0)\n",
+    "        sx = int(size_x)\n",
+    "        sy = int(size_y)\n",
+    "        \n",
+    "        rect = Canvas(self.window, bg=color, width=(sx * self.recX)-1, height=(sy * self.recY)-1, highlightthickness=0)\n",
     "        mouse_x = self.window.winfo_pointerx() - self.window.winfo_rootx()\n",
     "        mouse_y = self.window.winfo_pointery() - self.window.winfo_rooty()\n",
     "        rect.place(x=mouse_x, y=mouse_y)\n",
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 6,
    "id": "71728e3e",
    "metadata": {},
    "outputs": [],
@@ -240,7 +244,9 @@
     "3. 클릭하면 누르는 색 바뀐 후 해당 위치에 고정 + 100% 투명도\n",
     "4. 우클릭하면 삭제\n",
     "\n",
-    "클릭시 -> item = canvas.find_withtag(id) => thisrect.setposition(item.position)"
+    "클릭시 -> item = canvas.find_withtag(id) => thisrect.setposition(item.position)\n",
+    "방 변화 클릭시 -> grid창 맨 아래로 보내기\n",
+    "중복된 위치 체크 모듈"
    ]
   },
   {
@@ -296,9 +302,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RL",
+   "display_name": "learning",
    "language": "python",
-   "name": "rl"
+   "name": "learning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
