--- a/Furniture/Furniture_Batch_Application.ipynb
+++ b/Furniture/Furniture_Batch_Application.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0bfecbd",
+   "id": "fa37e8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff68a214",
+   "id": "f89e0c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "94c57ac1",
+   "id": "4f15db29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d427c75f",
+   "id": "35ebb9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
-   "id": "1df5d8bb",
+   "execution_count": 302,
+   "id": "e736a4b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,44 +175,41 @@
     "        self.create_canvas = Canvas(self.window, width=250, height=600, bg='cyan', highlightthickness=0)\n",
     "        self.create_canvas.place(x=500, y=50)\n",
     "        \n",
-    "        label = create_label(window=self.create_canvas, default_text='Name', font_size=14)\n",
-    "        label.place(x=10, y=50)\n",
-    "        name_textbox = create_textbox(window=self.create_canvas, height=1, width=10, default_text='', font_size=16)\n",
-    "        name_textbox.place(x=80, y=50)\n",
-    "        \n",
     "        label = create_label(window=self.create_canvas, default_text='Color', font_size=14)\n",
-    "        label.place(x=10, y=100)\n",
+    "        label.place(x=10, y=80)\n",
     "        self.color_code = ((255, 255, 255), '#ffffff')\n",
-    "        color_rect = self.create_canvas.create_rectangle(200, 100, 230, 130, fill=self.color_code[1])\n",
+    "        color_rect = self.create_canvas.create_rectangle(200, 80, 230, 110, fill=self.color_code[1])\n",
     "        color_button = Button(self.create_canvas, text='Select', height=1, width=13, \n",
     "                              command=lambda:self.choose_color(color_rect))\n",
-    "        color_button.place(x=80, y=100)\n",
+    "        color_button.place(x=80, y=80)\n",
     "        \n",
     "        label = create_label(window=self.create_canvas, default_text='Size', font_size=14)\n",
-    "        label.place(x=10, y=150)\n",
+    "        label.place(x=10, y=130)\n",
     "        label = create_label(window=self.create_canvas, default_text='X', font_size=14)\n",
-    "        label.place(x=120, y=150)\n",
+    "        label.place(x=120, y=130)\n",
     "        label = create_label(window=self.create_canvas, default_text='X', font_size=14)\n",
-    "        label.place(x=180, y=150)\n",
+    "        label.place(x=180, y=130)\n",
     "        size_x_textbox = create_textbox(window=self.create_canvas, height=1, width=3, default_text='1', font_size=13)\n",
     "        size_y_textbox = create_textbox(window=self.create_canvas, height=1, width=3, default_text='1', font_size=13)\n",
     "        size_z_textbox = create_textbox(window=self.create_canvas, height=1, width=3, default_text='1', font_size=13)\n",
-    "        size_x_textbox.place(x=80, y=150)\n",
-    "        size_y_textbox.place(x=140, y=150)\n",
-    "        size_z_textbox.place(x=200, y=150)\n",
+    "        size_x_textbox.place(x=80, y=130)\n",
+    "        size_y_textbox.place(x=140, y=130)\n",
+    "        size_z_textbox.place(x=200, y=130)\n",
+    "        \n",
+    "        label = Label(self.create_canvas, width=5, height=5, bg='red')\n",
+    "        label.place(x=0, y=200)\n",
     "        \n",
     "        create_btn = Button(self.create_canvas, text='Create', width=30, height=2, bg='cyan', \n",
-    "                            command=lambda: self.create_furniture(name_textbox, size_x_textbox, size_y_textbox, size_z_textbox))\n",
+    "                            command=lambda: self.create_furniture(size_x_textbox, size_y_textbox, size_z_textbox))\n",
     "        create_btn.place(x=15, y=0)\n",
     "        \n",
-    "    def create_furniture(self, nameT, size_xT, size_yT, size_zT):\n",
-    "        name = get_textbox(nameT)\n",
+    "    def create_furniture(self, size_xT, size_yT, size_zT):\n",
     "        color = self.color_code[1]\n",
     "        size_x = get_textbox_to_num(size_xT)\n",
     "        size_y = get_textbox_to_num(size_yT)\n",
     "        size_z = get_textbox_to_num(size_zT)\n",
     "        \n",
-    "        self.add_dict(name=name, color=color, size_list=(size_x, size_y, size_z))\n",
+    "        self.add_dict(color=color, size_list=(size_x, size_y, size_z))\n",
     "        \n",
     "        xlist = [x+25 for x in range(0, 400, int(self.recWidth))]\n",
     "        ylist = [y+205 for y in range(0, 400, int(self.recHeight))]\n",
@@ -226,13 +223,12 @@
     "        \n",
     "        self.furniture_objlist.append(furniture)\n",
     "        \n",
-    "    def add_dict(self, name, color, size_list):\n",
+    "    def add_dict(self, color, size_list):\n",
     "        key = 'furniture ' + str(len(self.furniture_list)+1)\n",
     "        self.furniture_list[key] = {}\n",
     "        \n",
     "        size = str(size_list[0]) + 'x' + str(size_list[1]) + 'x' + str(size_list[2])\n",
     "        \n",
-    "        self.furniture_list[key]['name'] = name\n",
     "        self.furniture_list[key]['color'] = color\n",
     "        self.furniture_list[key]['size'] = size\n",
     "        \n",
@@ -249,10 +245,12 @@
     "            event.widget.place(x=mouse_x-self.recWidth/2, y=mouse_y-self.recHeight/2)\n",
     "        \n",
     "        else:\n",
+    "            place_x = xlist[0]\n",
     "            for x in xlist:\n",
     "                if mouse_x > x:\n",
     "                    place_x = x\n",
     "                    \n",
+    "            place_y = ylist[0]\n",
     "            for y in ylist:\n",
     "                if mouse_y > y:\n",
     "                    place_y = y\n",
@@ -270,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "id": "e0555dc9",
+   "execution_count": 303,
+   "id": "821cf2ea",
    "metadata": {},
    "outputs": [
     {
@@ -282,20 +280,13 @@
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\vfgtr554\\anaconda3\\envs\\learning\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
       "    return self.func(*args)\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/736866676.py\", line 147, in <lambda>\n",
-      "    self.release(event,xlist, ylist, size_x, size_y))\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/736866676.py\", line 184, in release\n",
-      "    if place_y + self.recHeight * size_y > 605:\n",
-      "UnboundLocalError: local variable 'place_y' referenced before assignment\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\vfgtr554\\anaconda3\\envs\\learning\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/736866676.py\", line 147, in <lambda>\n",
-      "    self.release(event,xlist, ylist, size_x, size_y))\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/736866676.py\", line 184, in release\n",
-      "    if place_y + self.recHeight * size_y > 605:\n",
-      "UnboundLocalError: local variable 'place_y' referenced before assignment\n"
+      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/2499218143.py\", line 125, in <lambda>\n",
+      "    command=lambda: self.create_furniture(size_x_textbox, size_y_textbox, size_z_textbox))\n",
+      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/2499218143.py\", line 130, in create_furniture\n",
+      "    size_x = get_textbox_to_num(size_xT)\n",
+      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/3055746135.py\", line 3, in get_textbox_to_num\n",
+      "    return int(txt)\n",
+      "ValueError: invalid literal for int() with base 10: '55\\t55\\t55'\n"
      ]
     }
    ],
@@ -307,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca83acca",
+   "id": "608e768a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,15 +308,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ae6ed2",
+   "id": "6de17ad4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size 크기도 넘어가면 최대, 최소 정해놓기 (create module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "id": "fa5e9b41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "HORIZONTAL = 1\n",
+    "VERTICAL   = 2\n",
+    "\n",
+    "class App:\n",
+    "    def __init__(self, top):\n",
+    "        self.Frame1 = Frame(top, bd=5, relief='raised', width=100, height=100)\n",
+    "        self.Frame1.place(x=10, y=10)\n",
+    "        self.Frame1.bind(\"<ButtonPress-1>\", self.start_resize)\n",
+    "        self.Frame1.bind(\"<ButtonRelease-1>\", self.stop_resize)\n",
+    "        self.Frame1.bind(\"<Motion>\", self.resize_frame)\n",
+    "        self.resize_mode = 0\n",
+    "        self.cursor = ''\n",
+    "\n",
+    "    def check_resize_mode(self, x, y):\n",
+    "        width, height = self.Frame1.cget('width'), self.Frame1.cget('height')\n",
+    "        mode = 0\n",
+    "        if x > width-10: mode |= HORIZONTAL    \n",
+    "        if y > height-10: mode |= VERTICAL\n",
+    "        return mode\n",
+    "\n",
+    "    def start_resize(self, event):\n",
+    "        self.resize_mode = self.check_resize_mode(event.x, event.y)\n",
+    "\n",
+    "    def resize_frame(self, event):\n",
+    "        if self.resize_mode:\n",
+    "            if self.resize_mode & HORIZONTAL:\n",
+    "                self.Frame1.config(width=event.x)\n",
+    "            if self.resize_mode & VERTICAL:\n",
+    "                self.Frame1.config(height=event.y)\n",
+    "        else:\n",
+    "            cursor = 'size' if self.check_resize_mode(event.x, event.y) else ''\n",
+    "            if cursor != self.cursor:\n",
+    "                self.Frame1.config(cursor=cursor)\n",
+    "                self.cursor = cursor\n",
+    "\n",
+    "    def stop_resize(self, event):\n",
+    "        self.resize_mode = 0\n",
+    "\n",
+    "root = Tk()\n",
+    "root.geometry(\"800x600+400+50\")\n",
+    "App(root)\n",
+    "root.mainloop()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7824f76",
+   "id": "0d97682b",
    "metadata": {},
    "outputs": [],
    "source": []
