--- a/Furniture/Furniture_Batch_Application.ipynb
+++ b/Furniture/Furniture_Batch_Application.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f89e0c26",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "4f15db29",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "id": "35ebb9df",
    "metadata": {},
    "outputs": [],
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 5,
    "id": "e736a4b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GridEnv():\n",
+    "class GridModule():\n",
     "    def __init__(self, title='Application', cnt_grid_x = 10, cnt_grid_y = 10, grid_x = 400, grid_y = 400,\n",
     "                max_grid = 30, min_grid = 2, marginX = 5, marginY = 5):\n",
     "        self.window = makeDefaultWindow(title=title, geometry='800x800+500+100')\n",
@@ -268,28 +268,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
+   "id": "23029d42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CreateModule():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca05c97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListModule():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "da0f6c00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Utils():\n",
+    "    def __init__(self):\n",
+    "        None\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def makeDefaultWindow(title, geometry):\n",
+    "        window = Tk()\n",
+    "        window.geometry(geometry)\n",
+    "        window.title(title)\n",
+    "        window.resizable(width=False, height=False)\n",
+    "        return window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bf10aeca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Application():\n",
+    "    def __init__(self, title='Furniture Layout Batch Application', \n",
+    "                 window_width = 800, window_height = 800, window_x = 500, window_y = 100):\n",
+    "        geometry = str(window_width) + 'x' + str(window_height) + '+' + str(window_x) + '+' + str(window_y)\n",
+    "        self.window = Utils.makeDefaultWindow(title=title, geometry=geometry)\n",
+    "        \n",
+    "        '''\n",
+    "        self.grid_module = GridModule(~)\n",
+    "        self.create_module = CreateModule(~)\n",
+    "        self.list_module = ListModule(~)\n",
+    "        \n",
+    "        self.grid_module.place(x=,y=)\n",
+    "        self.create_module.place(x=,y=)\n",
+    "        self.list_module.place(x=,y=)\n",
+    "        '''\n",
+    "        \n",
+    "    def runApp(self):\n",
+    "        self.window.mainloop()\n",
+    "        \n",
+    "app = Application(title='Furniture Batch Application', window_width=1200, window_height=1000, window_x = 500, window_y = 200)\n",
+    "app.runApp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "821cf2ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\vfgtr554\\anaconda3\\envs\\learning\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/2499218143.py\", line 125, in <lambda>\n",
-      "    command=lambda: self.create_furniture(size_x_textbox, size_y_textbox, size_z_textbox))\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/2499218143.py\", line 130, in create_furniture\n",
-      "    size_x = get_textbox_to_num(size_xT)\n",
-      "  File \"C:\\Users\\vfgtr554\\AppData\\Local\\Temp/ipykernel_12376/3055746135.py\", line 3, in get_textbox_to_num\n",
-      "    return int(txt)\n",
-      "ValueError: invalid literal for int() with base 10: '55\\t55\\t55'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = GridEnv()\n",
     "app.runApp()"
