--- a/VRvis/model/eeg.ipynb
+++ b/VRvis/model/eeg.ipynb
@@ -138,7 +138,7 @@
     "    return dataList, highList, lowList\n",
     "\n",
     "src = './STEW Dataset/'\n",
-    "originalData = getData(src)"
+    "originalData, highData, lowData = getData(src)"
    ]
   },
   {
@@ -801,6 +801,7 @@
     "    return np.array(data_list), np.array(label_list)\n",
     "\n",
     "dataList, labelList = windowing_dataset(data,label,10)\n",
+    "#labelList = to_categorical(labelList,9)\n",
     "print(data.shape, label.shape, dataList.shape, labelList.shape)"
    ]
   },
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,14 +841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12096, 10, 14) (5184, 10, 14) (12096,) (5184,)\n"
+      "(12096, 10, 14) (5184, 10, 14) (12096, 9) (5184, 9)\n"
      ]
     }
    ],
@@ -858,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -877,33 +878,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trials=[3, 5]\n",
-    "epochs=[10, 20]\n",
-    "for trial in trials:\n",
-    "    clf = ak.ImageClassifier(max_trials=trial)\n",
-    "    clf.fit(x=X_train, y=Y_train)\n",
-    "\n",
-    "    predicted_y = clf.predict(X_test)\n",
-    "    print(predicted_y)\n",
-    "    loss, acc = clf.evaluate(X_test, Y_test)\n",
-    "    print(clf.evaluate(X_test, Y_test))\n",
-    "    print('Loss: %.3f   Accuracy: %.3f' % (loss,acc))\n",
-    "\n",
-    "    model = clf.export_model()\n",
-    "    model.summary()\n",
-    "    plot_model(model, show_shapes=True)\n",
-    "    tmp = int(acc*100)\n",
-    "    print(tmp)\n",
-    "model.save('model/WindowingAutoKeras_'+\n",
-    "            str(datetime.now().strftime('%Y-%m-%d %H-%M-%S'))+' ACC_'+str(tmp)+'try.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -912,81 +886,149 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 23 Complete [00h 26m 26s]\n",
-      "val_loss: 0.516599178314209\n",
+      "Trial 2 Complete [00h 22m 32s]\n",
+      "val_loss: 0.32987186312675476\n",
       "\n",
-      "Best val_loss So Far: 0.049887947738170624\n",
-      "Total elapsed time: 11h 30m 49s\n",
+      "Best val_loss So Far: 0.12271249294281006\n",
+      "Total elapsed time: 00h 23m 01s\n",
       "\n",
-      "Search: Running Trial #24\n",
+      "Search: Running Trial #3\n",
       "\n",
       "Hyperparameter    |Value             |Best Value So Far \n",
+      "image_block_1/b...|efficient         |vanilla           \n",
       "image_block_1/n...|True              |True              \n",
-      "image_block_1/a...|False             |False             \n",
-      "image_block_1/b...|resnet            |resnet            \n",
-      "image_block_1/r...|False             |False             \n",
-      "image_block_1/r...|resnet152         |resnet152         \n",
-      "image_block_1/r...|False             |False             \n",
-      "classification_...|global_max        |global_max        \n",
-      "classification_...|0.5               |0.5               \n",
-      "optimizer         |adam_weight_decay |adam_weight_decay \n",
-      "learning_rate     |0.01              |0.001             \n",
+      "image_block_1/a...|True              |False             \n",
+      "image_block_1/i...|True              |None              \n",
+      "image_block_1/i...|False             |None              \n",
+      "image_block_1/i...|0                 |None              \n",
+      "image_block_1/i...|0                 |None              \n",
+      "image_block_1/i...|0.1               |None              \n",
+      "image_block_1/i...|0                 |None              \n",
+      "image_block_1/e...|True              |None              \n",
+      "image_block_1/e...|b7                |None              \n",
+      "image_block_1/e...|True              |None              \n",
+      "image_block_1/e...|True              |None              \n",
+      "classification_...|global_avg        |flatten           \n",
+      "classification_...|0                 |0.5               \n",
+      "optimizer         |adam              |adam              \n",
+      "learning_rate     |2e-05             |0.001             \n",
       "\n",
-      "Epoch 1/30\n",
-      "303/303 [==============================] - 89s 219ms/step - loss: 0.7881 - accuracy: 0.6412 - val_loss: 611137.7500 - val_accuracy: 0.4371\n",
-      "Epoch 2/30\n",
-      "303/303 [==============================] - 65s 215ms/step - loss: 0.7526 - accuracy: 0.6739 - val_loss: 29783.7031 - val_accuracy: 0.4371\n",
-      "Epoch 3/30\n",
-      "303/303 [==============================] - 67s 222ms/step - loss: 0.9229 - accuracy: 0.6229 - val_loss: 11092.0615 - val_accuracy: 0.4642\n",
-      "Epoch 4/30\n",
-      "303/303 [==============================] - 66s 219ms/step - loss: 1.0431 - accuracy: 0.5752 - val_loss: 15217.3447 - val_accuracy: 0.5100\n",
-      "Epoch 5/30\n",
-      "303/303 [==============================] - 65s 215ms/step - loss: 0.6176 - accuracy: 0.7088 - val_loss: 0.6850 - val_accuracy: 0.6925\n",
-      "Epoch 6/30\n",
-      "303/303 [==============================] - 65s 215ms/step - loss: 0.4413 - accuracy: 0.8229 - val_loss: 0.2618 - val_accuracy: 0.9083\n",
-      "Epoch 7/30\n",
-      "303/303 [==============================] - 64s 212ms/step - loss: 0.3706 - accuracy: 0.8830 - val_loss: 0.3500 - val_accuracy: 0.8704\n",
-      "Epoch 8/30\n",
-      "303/303 [==============================] - 64s 212ms/step - loss: 0.3238 - accuracy: 0.9028 - val_loss: 0.3772 - val_accuracy: 0.8300\n",
-      "Epoch 9/30\n",
-      "303/303 [==============================] - 64s 213ms/step - loss: 0.1977 - accuracy: 0.9287 - val_loss: 0.4731 - val_accuracy: 0.8296\n",
-      "Epoch 10/30\n",
-      "303/303 [==============================] - 65s 214ms/step - loss: 0.1807 - accuracy: 0.9332 - val_loss: 0.2322 - val_accuracy: 0.9008\n",
-      "Epoch 11/30\n",
-      "303/303 [==============================] - 65s 215ms/step - loss: 0.1805 - accuracy: 0.9394 - val_loss: 0.1296 - val_accuracy: 0.9504\n",
-      "Epoch 12/30\n",
-      "303/303 [==============================] - 65s 213ms/step - loss: 0.1764 - accuracy: 0.9463 - val_loss: 0.2306 - val_accuracy: 0.8938\n",
-      "Epoch 13/30\n",
-      "303/303 [==============================] - 67s 220ms/step - loss: 0.1422 - accuracy: 0.9484 - val_loss: 0.1494 - val_accuracy: 0.9433\n",
-      "Epoch 14/30\n",
-      "303/303 [==============================] - 65s 213ms/step - loss: 0.1199 - accuracy: 0.9558 - val_loss: 0.1842 - val_accuracy: 0.9350\n",
-      "Epoch 15/30\n",
-      "303/303 [==============================] - 65s 216ms/step - loss: 0.1158 - accuracy: 0.9580 - val_loss: 0.2963 - val_accuracy: 0.8754\n",
-      "Epoch 16/30\n",
-      "303/303 [==============================] - 64s 213ms/step - loss: 0.1051 - accuracy: 0.9598 - val_loss: 0.1597 - val_accuracy: 0.9375\n",
-      "Epoch 17/30\n",
-      "303/303 [==============================] - 65s 213ms/step - loss: 0.1141 - accuracy: 0.9600 - val_loss: 0.5220 - val_accuracy: 0.9488\n",
-      "Epoch 18/30\n",
-      "303/303 [==============================] - 64s 213ms/step - loss: 0.0946 - accuracy: 0.9673 - val_loss: 0.1059 - val_accuracy: 0.9600\n",
-      "Epoch 19/30\n",
-      "303/303 [==============================] - 66s 218ms/step - loss: 0.0891 - accuracy: 0.9684 - val_loss: 0.2139 - val_accuracy: 0.9137\n",
-      "Epoch 20/30\n",
-      "303/303 [==============================] - 66s 219ms/step - loss: 0.0701 - accuracy: 0.9750 - val_loss: 0.1922 - val_accuracy: 0.9350\n",
-      "Epoch 21/30\n",
-      "303/303 [==============================] - 67s 222ms/step - loss: 0.0675 - accuracy: 0.9769 - val_loss: 0.3252 - val_accuracy: 0.8750\n",
-      "Epoch 22/30\n",
-      "303/303 [==============================] - 67s 222ms/step - loss: 0.0548 - accuracy: 0.9792 - val_loss: 0.1720 - val_accuracy: 0.9379\n",
-      "Epoch 23/30\n",
-      "303/303 [==============================] - 67s 221ms/step - loss: 0.0495 - accuracy: 0.9829 - val_loss: 0.0645 - val_accuracy: 0.9767\n",
-      "Epoch 24/30\n",
-      "303/303 [==============================] - 66s 219ms/step - loss: 0.0394 - accuracy: 0.9863 - val_loss: 0.0841 - val_accuracy: 0.9742\n",
-      "Epoch 25/30\n",
-      "303/303 [==============================] - 68s 224ms/step - loss: 0.0354 - accuracy: 0.9877 - val_loss: 0.0926 - val_accuracy: 0.9700\n",
-      "Epoch 26/30\n",
-      " 28/303 [=>............................] - ETA: 58s - loss: 0.0153 - accuracy: 0.9955"
+      "Epoch 1/20\n",
+      "Not enough memory, reduce batch size to 16.\n",
+      "Epoch 1/20\n",
+      "      2/Unknown - 2s 776ms/step - loss: 2.2051 - accuracy: 0.0938Not enough memory, reduce batch size to 8.\n",
+      "Epoch 1/20\n",
+      "1212/1212 [==============================] - 624s 514ms/step - loss: 0.8843 - accuracy: 0.6437 - val_loss: 2.3127 - val_accuracy: 0.2221\n",
+      "Epoch 2/20\n",
+      "1212/1212 [==============================] - 627s 518ms/step - loss: 0.5258 - accuracy: 0.7749 - val_loss: 2.5985 - val_accuracy: 0.2221\n",
+      "Epoch 3/20\n",
+      "1212/1212 [==============================] - 633s 522ms/step - loss: 0.4347 - accuracy: 0.8208 - val_loss: 52.4192 - val_accuracy: 0.5742\n",
+      "Epoch 4/20\n",
+      "1212/1212 [==============================] - 657s 542ms/step - loss: 0.3692 - accuracy: 0.8501 - val_loss: 11.6359 - val_accuracy: 0.7692\n",
+      "Epoch 5/20\n",
+      "1212/1212 [==============================] - 635s 524ms/step - loss: 0.3261 - accuracy: 0.8698 - val_loss: 11.9394 - val_accuracy: 0.6296\n",
+      "Epoch 6/20\n",
+      "1212/1212 [==============================] - 611s 504ms/step - loss: 0.2874 - accuracy: 0.8863 - val_loss: 1.4767 - val_accuracy: 0.5033\n",
+      "Epoch 7/20\n",
+      "1212/1212 [==============================] - 612s 505ms/step - loss: 0.2704 - accuracy: 0.8970 - val_loss: 149.5233 - val_accuracy: 0.5875\n",
+      "Epoch 8/20\n",
+      "1212/1212 [==============================] - 611s 504ms/step - loss: 0.2373 - accuracy: 0.9082 - val_loss: 3.8255 - val_accuracy: 0.5654\n",
+      "Epoch 9/20\n",
+      "1212/1212 [==============================] - 619s 510ms/step - loss: 0.2127 - accuracy: 0.9183 - val_loss: 3.6552 - val_accuracy: 0.2171\n",
+      "Epoch 10/20\n",
+      "1212/1212 [==============================] - 664s 547ms/step - loss: 0.2131 - accuracy: 0.9169 - val_loss: 4.6500 - val_accuracy: 0.4196\n",
+      "Epoch 11/20\n",
+      "1212/1212 [==============================] - 660s 545ms/step - loss: 0.1877 - accuracy: 0.9280 - val_loss: 0.6876 - val_accuracy: 0.8196\n",
+      "Epoch 12/20\n",
+      "1212/1212 [==============================] - 674s 556ms/step - loss: 0.1753 - accuracy: 0.9333 - val_loss: 20.8109 - val_accuracy: 0.2129\n",
+      "Epoch 13/20\n",
+      "1212/1212 [==============================] - 658s 543ms/step - loss: 0.1626 - accuracy: 0.9406 - val_loss: 6.6130 - val_accuracy: 0.1958\n",
+      "Epoch 14/20\n",
+      "1212/1212 [==============================] - 654s 540ms/step - loss: 0.1578 - accuracy: 0.9370 - val_loss: 1.2022 - val_accuracy: 0.8204\n",
+      "Epoch 15/20\n",
+      "1212/1212 [==============================] - 652s 538ms/step - loss: 0.1450 - accuracy: 0.9446 - val_loss: 50.4781 - val_accuracy: 0.2113\n",
+      "Epoch 16/20\n",
+      "1212/1212 [==============================] - 638s 526ms/step - loss: 0.1340 - accuracy: 0.9508 - val_loss: 13.6842 - val_accuracy: 0.7650\n",
+      "Epoch 17/20\n",
+      "1212/1212 [==============================] - 677s 558ms/step - loss: 0.1230 - accuracy: 0.9538 - val_loss: 18.5355 - val_accuracy: 0.2042\n",
+      "Epoch 18/20\n",
+      "1212/1212 [==============================] - 651s 537ms/step - loss: 0.1300 - accuracy: 0.9497 - val_loss: 0.6377 - val_accuracy: 0.7650\n",
+      "Epoch 19/20\n",
+      " 352/1212 [=======>......................] - ETA: 6:53 - loss: 0.1065 - accuracy: 0.9553"
      ]
     }
    ],
+   "source": [
+    "trials=[20] #3,5,10, \n",
+    "for trial in trials:\n",
+    "    clf_ = ak.ImageClassifier(overwrite=True, max_trials=trial)\n",
+    "    clf_.fit(x=X_train, y=Y_train, epochs=20)\n",
+    "\n",
+    "    predicted_y = clf_.predict(X_test)\n",
+    "    print(predicted_y)\n",
+    "    loss, acc = clf_.evaluate(X_test, Y_test)\n",
+    "    print(clf_.evaluate(X_test, Y_test))\n",
+    "    print('Loss: %.3f   Accuracy: %.3f' % (loss,acc))\n",
+    "\n",
+    "    model = clf_.export_model()\n",
+    "    model.summary()\n",
+    "    plot_model(model, show_shapes=True)\n",
+    "    tmp = int(acc*100)\n",
+    "    print(tmp)\n",
+    "    model.save('model/WindowingLabel2AutoKeras_'+\n",
+    "                str(datetime.now().strftime('%Y-%m-%d %H-%M-%S'))+' ACC_'+str(tmp)+'try.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model1 + (Model2-1 + Model2-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def windowing_dataset(data, label, window_size):\n",
+    "    data_list = []\n",
+    "    label_list = []\n",
+    "    \n",
+    "    for i in range(0,len(data)//window_size,window_size):\n",
+    "        data_list.append(np.array(data.iloc[i:i+window_size]))\n",
+    "        label_list.append(np.array(label.iloc[i]))\n",
+    "    return np.array(data_list), np.array(label_list)\n",
+    "\n",
+    "dataList, labelList = windowing_dataset(data,label,10)\n",
+    "#labelList = to_categorical(labelList,9)\n",
+    "print(data.shape, label.shape, dataList.shape, labelList.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model('_.h5')\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(dataList,labelList, train_size=0.7, random_state=True ,stratify = labelList)\n",
+    "print(X_train.shape, X_test.shape, Y_train.shape, Y_test.shape)\n",
+    "\n",
+    "if model.predict_classes():\n",
+    "    \n",
+    "\n",
+    "for i in range(5):\n",
+    "    print('True : ' + str(argmax(y_test[xhat_idx[i]])) + ', Predict : ' + str(yhat[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(dataList,labelList, train_size=0.7, random_state=True ,stratify = labelList)\n",
     "print(X_train.shape, X_test.shape, Y_train.shape, Y_test.shape)\n",
