--- a/Furniture/RL.ipynb
+++ b/Furniture/RL.ipynb
@@ -3,12 +3,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d54e588f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.layers import Dence, Conv1D, MaxPooling1D, Flatten, concatenate, Conv2D, MaxPooling2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4f875d6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DQNNetwork(self):\n",
-    "    "
+    "class DQN(tf.keras.Model):\n",
+    "    def __init__(self):\n",
+    "        super(DQN, self).__init__()\n",
+    "        \n",
+    "        self.grid_cnn = Conv2D()\n",
+    "        self.grid_dnn = Dense()\n",
+    "        \n",
+    "        self.cur_grid_cnn = Conv2D()\n",
+    "        self.cur_grid_dnn = Dense()\n",
+    "        \n",
+    "        self.mask_grid_cnn = Conv2D()\n",
+    "        self.mask_grid_dnn = Dense()\n",
+    "        \n",
+    "        self.size_grid_cnn = Conv2D()\n",
+    "        self.size_grid_dnn = Dense()\n",
+    "        \n",
+    "    def call(self, datas):\n",
+    "        grid, cur_grid, mask_grid, size_grid = datas[0], datas[1], datas[2], datas[3]\n",
+    "        \n",
+    "        = self.grid_cnn\n",
+    "        = self.grid_dnn\n",
+    "        \n",
+    "        = self.cur_grid_cnn \n",
+    "        = self.cur_grid_dnn\n",
+    "        \n",
+    "        = self.mask_grid_cnn\n",
+    "        = self.mask_grid_dnn\n",
+    "        \n",
+    "        = self.size_grid_cnn\n",
+    "        = self.size_grid_dnn\n",
+    "        \n",
+    "        = concatenate()\n",
+    "        \n",
+    "        = self.f1()\n",
+    "        = self.f2()\n",
+    "        = self.f()\n",
+    "        \n",
+    "        return"
    ]
   },
   {
