--- a/Furniture/Refactoring.ipynb
+++ b/Furniture/Refactoring.ipynb
@@ -50,7 +50,7 @@
     "        return window\n",
     "    \n",
     "    @staticmethod\n",
-    "    def create_canvas(window, width=1, height=1, highlight=0, bg='default', x=0, y=0):\n",
+    "    def create_canvas(window, width=1, height=1, highlight=0, bg='default', x=0, y=0):ㅋ`\n",
     "        if bg == 'default':\n",
     "            bg = window.cget('bg')\n",
     "            \n",
@@ -294,6 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#수정 필요\n",
     "class ModifyModule():\n",
     "    def __init__(self, window, parent):\n",
     "        self.window = window\n",
@@ -317,7 +318,7 @@
     "        self.delete_button.place(x=0, y=0)        \n",
     "        self.delete_button.config(bg='green', font=('Courier', 14))\n",
     "        \n",
-    "    def delete(self):\n",
+    "    def delete(self):        \n",
     "        self.delete_module()\n",
     "        self.canvas.destroy()\n",
     "        self.parent.obj.destroy()\n",
@@ -351,6 +352,8 @@
     "                                                  font='Courier', font_size=20, x=345, y=50)\n",
     "        submit_btn = Button(self.canvas, text='Submit', font=(\"Courier\", 14), command=self.submit)\n",
     "        submit_btn.place(x=470, y=50)\n",
+    "        \n",
+    "        font = tkinter.Font(fontsize=14, font_family=\"Courier\")\n",
     "        \n",
     "        next_btn = Button(self.window, text='Next', font=(\"Courier\", 14), command=self.parent.next_btn)\n",
     "        next_btn.place(x=1000, y=850)\n",
@@ -413,7 +416,17 @@
     "        self.text_pos = {'x':self.size['w']/2, 'y':self.size['h']/2}\n",
     "        self.text = self.obj.create_text(self.text_pos['x'], self.text_pos['y'],\n",
     "                                        fill='black', text='')\n",
-    "        \n",
+    "\n",
+    "    ''' 나중에 바꿀거 (위에 모듈들 싹다 추가)\n",
+    "    def get_config(self, position=True, size=True, types=True):\n",
+    "        data = []\n",
+    "        if position: data.append({'pos':self.position})\n",
+    "        if size: data.append({'size', self.size})\n",
+    "        if types: data.append({'type': self.obj.itemcget(self.text, 'text')})\n",
+    "            \n",
+    "        return data\n",
+    "    '''\n",
+    "    \n",
     "    def get_config(self):\n",
     "        data  = [\n",
     "            {'position':self.position},\n",
@@ -492,6 +505,47 @@
     "                self.position['y'] = place_y + 1\n",
     "                \n",
     "        self.update_position()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b5f857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoorWindowBatchGrid:\n",
+    "    def __init__(self):\n",
+    "        grid = make_grid\n",
+    "        door = make_door_layout\n",
+    "        window = make_window_layout\n",
+    "        submit = make_submit_button\n",
+    "        \n",
+    "    def door_click(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        door_duplicate\n",
+    "        \n",
+    "    def window_clock(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        window_duplicate\n",
+    "        \n",
+    "    def door_move(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        \n",
+    "    def door_leave(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        \n",
+    "    def window_move(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        \n",
+    "    def window_leave(self):\n",
+    "        mousepos = get_mousepos\n",
+    "        \n",
+    "        \n",
+    "    def s00  0ubmit(self):\n",
+    "        data Save\n",
+    "        root.geometry('Loading Geometry')\n",
+    "        RL Module Start"
    ]
   },
   {
