--- a/Furniture/Refactoring.ipynb
+++ b/Furniture/Refactoring.ipynb
@@ -353,8 +353,6 @@
     "        submit_btn = Button(self.canvas, text='Submit', font=(\"Courier\", 14), command=self.submit)\n",
     "        submit_btn.place(x=470, y=50)\n",
     "        \n",
-    "        font = tkinter.Font(fontsize=14, font_family=\"Courier\")\n",
-    "        \n",
     "        next_btn = Button(self.window, text='Next', font=(\"Courier\", 14), command=self.parent.next_btn)\n",
     "        next_btn.place(x=1000, y=850)\n",
     "        \n",
@@ -670,7 +668,9 @@
    "id": "b57976c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Data Save -> JSON"
+   ]
   }
  ],
  "metadata": {
